chore(release): v1.5.1
- Track the Komugi island + its mini-boss Charlotte Perospero.
- findMobSlot: locate the mini-boss category by lore ("Mini-Boss" / "présents
  sur cette île") instead of the single island boss, so islands whose category
  item has a non-standard name (Komugi "Soldats biscuits") return the boss list
  with coords/timers. Also fixes missing mini-bosses on Whole Cake (Capone Bege).